tests/rosetta/out/Fortran/call-a-function-11.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program call_a_function_11
  implicit none
    integer :: x
    integer :: i
    character(len=100) :: s0
    integer :: tmp
    character(len=100) :: s1
    integer, dimension(1) :: box
    character(len=100) :: s2
  call main()
  contains
  recursive integer function zeroval(ival) result(res)
    integer, intent(in) :: ival
    x = ival
    x = 0
    res = x
    return
  end function zeroval
  recursive subroutine zeroptr(ref)
    integer, intent(in) :: ref
    ref(((0)+1)) = 0
  end subroutine zeroptr
  recursive subroutine main()
    i = 1
    write(s0,'(G0)') i
    print *, 'initial: ' // s0
    tmp = zeroval(i)
    write(s1,'(G0)') i
    print *, 'zeroval: ' // s1
    box = (/i/)
    call zeroptr(box)
    i = box(((0)+1))
    write(s2,'(G0)') i
    print *, 'zeroptr: ' // s2
    print *, 'pointer: 0'
  end subroutine main
end program call_a_function_11
